Bug 168809 - can't resize kate mainwindow on Mac OSX
Summary: can't resize kate mainwindow on Mac OSX
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources macOS
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
: 170199 (view as bug list)
Depends on:
Blocks:
 
Reported: 2008-08-09 16:30 UTC by Alexander Neundorf
Modified: 2009-12-18 19:30 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Patch which should resolve the problem (126 bytes, patch)
2009-12-14 16:25 UTC, Jan Gosmann
Details
Updated patch wich is surrounded by #ifdef and was created with -u option (694 bytes, patch)
2009-12-16 21:48 UTC, Jan Gosmann
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alexander Neundorf 2008-08-09 16:30:21 UTC
Version:            (using Devel)
Installed from:    Compiled sources
Compiler:          gcc 4.0.1 Apple MacBook (Intel)
OS:                OS X

This is with kate from current svn (August 09, 2008) on OS X with Qt 4.4 installed as frameworks.
kate starts and works, but I can't resize the mainwindow. The resize handle of the mainwindow is visible, but it is not completely in the lower right corner, but above the "Terminal"/"Find in Files" bar.
If I grab the resize handle, it doesn't do anything, if I grab the lower right corner it also doesn't resize.

Alex
Comment 1 Krater 2008-11-17 19:33:49 UTC
I' having the same bug. The window opens maximized and I can't resize it.
I'm running Kate on Mac OS X 10.5.5 from KDE 4.1.2 package for OS X from mac.kde.org, which includes QT 4.4.
Comment 2 jolz 2009-02-08 18:25:02 UTC
here too. 

jolz@jolz-macbook:~> konqueror --version
Qt: 4.4.3
KDE: 4.2.00 (KDE 4.2.0)
Konqueror: 4.2.00 (KDE 4.2.0)
jolz@jolz-macbook:~> port list kdebase4
kdebase4                       @4.2.0          kde/kdebase4
jolz@jolz-macbook:~> 
Comment 3 jolz 2009-02-08 18:30:21 UTC
(In reply to comment #2)
> here too. 
with konqueror. (i forgott - sorry)

Comment 4 Jan Gosmann 2009-09-15 19:25:19 UTC
I have the same problem. But this should be no big deal to fix. Probably all you have to do is to add somewhere a QSizeGrip.
Comment 5 Jan Gosmann 2009-09-15 19:42:12 UTC
Discovered a duplicate bug report for the bug: #170199
Comment 6 illogic-al 2009-09-16 01:17:23 UTC
*** Bug 170199 has been marked as a duplicate of this bug. ***
Comment 7 Jan Gosmann 2009-12-14 16:25:09 UTC
Created attachment 39047 [details]
Patch which should resolve the problem
Comment 8 Milian Wolff 2009-12-14 18:18:00 UTC
Please explain:

- why is this required, the code itself looks totally strange to me
- if it works around some quirky Qt behavior on Mac platforms, it probably should be #ifdef'ed for that platform only (or did you test this on the other platforms (windows, linux, ...) - does it still work there like before?
- please create patches with -u
Comment 9 Jan Gosmann 2009-12-15 00:02:48 UTC
Why this code is required: KStatusBar will set per default the ShowSizeGrip property on OS X. However this size grip does not work in Kate on OS X. I do not really know why, because in other application it works. Maybe it's because the status bar can be hidden or is not the most bottom bar if you have tabs for the terminal or stuff like that at the bottom.
Because the default size grip does not work I disable it and add manually a new QSizeGrip which for some reason works.
I admit it is a bit strange, but it works and IMO an unresizeable editor window totally sucks.
I do not know whether there is any sense in reporting this to Qt, because in every other Qt or KDE application I have seen resizing was no problem.

That with the #ifdef is a good hint. I will add that (but may take me some days).

I will also use -u for the new patch. I did not know about this option, because this is just the second patch or so I am submitting to an open source project. Therefore thanks for telling me.
Comment 10 Jan Gosmann 2009-12-16 21:48:52 UTC
Created attachment 39103 [details]
Updated patch wich is surrounded by #ifdef and was created with -u option
Comment 11 Milian Wolff 2009-12-18 19:30:26 UTC
SVN commit 1063531 by mwolff:

Fix resizing of Kate under Mac OS X.

Path by Jan Gosmann, thanks!

BUG: 168809

 M  +6 -0      kateviewspace.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1063531