Fix resizing of Kate under Mac OS X.

Path by Jan Gosmann, thanks!

BUG: 168809

svn path=/trunk/KDE/kdesdk/kate/; revision=1063531